[tool.poetry]
name = "smbmc"
version = "0.1.0"
description = "Supermicro BMC interface"
authors = ["George Rawlinson <george@rawlinson.net.nz>"]
repository = "https://github.com/grawlinson/smbmc"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
betamax = "^0.8.1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3"}
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.2.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
reorder-python-imports = "^2.3.5"
darglint = "^1.5.5"
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["smbmc"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
